# AoC_2020

./: .gitignore  CMakeLists.txt  README.md
include/: aoc_generic.hpp
lib/: aoc_generic.cpp
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day06b.cpp  day07.cpp  day08.cpp  day09.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp
